- Rename: testamg.c --> testbamg.c and update test/ini/bamg.c.
- Update VS10 and remove testamg project.
- Rename: test_smat.c --> testsmat.c.
- Remove testbsr.c from test/main, testbamg.c does the same thing.
- Change function parameters for transz().
- Fix a bug in initializaing UMFPACK in amg_setup_rs.c.
- Fix memory leakage in numerical factorization interface to UMFPACK.

09/30/2015 FASP 1.8.0:
- Fix Clang warnings when comparing an address with NULL.
- Fix more warnings with debug=ALL except unused symbols.
- Fix missing Fortran file in VS10.
- Add FASP_VERSION macro in fasp.h.
- Update Doxygen settings.
- Update Doxygen and webpage.

09/15/2015 FASP 1.7.9:
- Add new version of transpose, permutation, and sort for dCSRmat.
- Update paramters for SA AMG.
- Update regression results after changing SA parameters.
- Replace trans and sort by transz in UMFPACK and test.
- Slightly modify printing format for the AMG parameters.
- Fix and update some parameters in ini.
- Revise some warning messages in Makefile.
- Confirm FEniCS conf problem: It sets CC=/usr/bin/gcc.
- Change filename: from fasp.mk to FASP.mk.
- Clean up interfaces to direct solvers and add reference.
- Clean up header files
- Update util/stat.h.
- Update Doxygen and webpage.

09/09/2015 FASP 1.7.8:
- Remove factor.f from the repo.
- Update VS10 to fix a directory problem in WIN32 configuration.
- Clean up Doxygen for a few functions.

09/04/2015 FASP 1.7.7:
- Replace the Fortran version of Schwarz smoother by the C version.
- Test V, AMLI, Nonlinear AMLI, F cycles with the Schwarz smoother.
- Update Doxygen and FASP webpage.
- Remove VS08; stop supporting Visual Studio before 2010.

08/19/2015 FASP 1.7.6:
- Update CMAKE and its modules.
- Fix UMFPACK and MUMPS link problems.
- Add util/fix_fenics.sh script and fix FEniCS conf problems.
- Add fasp.mk for user-specific make options.
- Add a warning when CC and FC version does not match.
- Add and update Q&A for install problems. 